[gd_scene load_steps=5 format=3 uid="uid://edg1pdfr8iu4"]

[ext_resource type="Script" path="res://Scripts/unstable_platform.gd" id="1_4q864"]
[ext_resource type="Texture2D" uid="uid://dmxmrs3es4sws" path="res://Sprites/broken_platform.png" id="2_hnhtc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhk4g"]
size = Vector2(128, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cooia"]
size = Vector2(122, 2)

[node name="Unstable Platform" type="StaticBody2D"]
collision_layer = 16
script = ExtResource("1_4q864")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, -4.76837e-07)
scale = Vector2(2.13333, 1.6)
texture = ExtResource("2_hnhtc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yhk4g")

[node name="Break Timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Repair Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Break Region" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Break Region"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_cooia")

[connection signal="timeout" from="Break Timer" to="." method="_on_break_timer_timeout"]
[connection signal="timeout" from="Repair Timer" to="." method="_on_repair_timer_timeout"]
[connection signal="body_entered" from="Break Region" to="." method="_on_break_region_body_entered"]
